added script and Image_UUID metadata

--- a/etc/imagedb.properties
+++ b/etc/imagedb.properties
@@ -1,10 +1,11 @@
 # Root logger option
-log4j.rootLogger=DEBUG, photodb
+# Levels=OFF,FATAL,ERROR,WARN.INFO,DEBUG,TRACE,ALL
+log4j.rootLogger=DEBUG, imagedb
 
 # Direct log messages to stdout
-log4j.appender.photodb=org.apache.log4j.ConsoleAppender
-log4j.appender.photodb.layout=org.apache.log4j.PatternLayout
-log4j.appender.photodb.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.imagedb=org.apache.log4j.ConsoleAppender
+log4j.appender.imagedb.layout=org.apache.log4j.PatternLayout
+log4j.appender.imagedb.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
 
 db.server=localhost
 db.database=photodb
